--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: artifact
-        path: target/myproject-0.0.1-SNAPSHOT.jar
+        path: build/target/myproject-0.0.1-SNAPSHOT.jar
         
   deploy:
     needs: build
